fix: overflow detail descriptions

--- a/src/components/Residencies/Residencies.css
+++ b/src/components/Residencies/Residencies.css
@@ -38,6 +38,7 @@
 .r-card>:nth-child(4) {
     font-size: 0.7rem;
     width: 15rem;
+    max-width: 100%;
 }
 
 .r-card:hover {
